<resources>
    <string name="app_name">Super Calculator</string>
    <string name="txtNumber">Enter a number</string>
    <string name="sum">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="equals">=</string>
    <string name="delete">&lt;-</string>
    <string name="negative">Neg</string>
    <string name="dot">.</string>

</resources>
