<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="false">

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNumber"
        android:gravity="end"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/sum"
            android:text="@string/sum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/subtraction"
            android:text="@string/subtraction"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/multiplication"
            android:text="@string/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/division"
            android:text="@string/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnOne"
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnTwo"
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnThree"
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnFour"
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnFive"
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnSix"
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnAc"
            android:text="@string/ac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nine"/>

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equals"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btnDot"
            android:text="@string/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnZero"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnNegative"
            android:text="@string/negative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btnEquals2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equals"/>

    </LinearLayout>

    <TextView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
