<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="false"
    android:weightSum="6"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="30sp"
        android:gravity="end|center"
        android:padding="5dp"
        android:text="@string/txtNumber"
        android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_weight="1">

                <Button
                    android:id="@+id/sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sum"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dot"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_weight="1">

                <Button
                    android:id="@+id/subtraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtraction"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eight"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_weight="1">

                <Button
                    android:id="@+id/multiplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplication"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nine"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnNegative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/negative"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_weight="1">

                <Button
                    android:id="@+id/division"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/division"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/delete"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnAc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/ac"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/btnEquals"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/equals"
                    android:layout_weight="2"
                    android:textSize="30sp"/>
            </LinearLayout>
    </LinearLayout>


</LinearLayout>